<resources>
    <string name="app_name">Djunkgo</string>
    <string name="title_activity_myitems">myitems</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_tittle">Selamat Datang</string>
    <string name="btn_daftar">Daftar</string>
    <string name="btn_masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="nama">Nama</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi ?</string>
    <string name="lupa_kata_sandi_title">Lupa Kata Sandi </string>
    <string name="lupa_kata_sandi_content">Kami akan mengirimkan kode untuk membuat kata sandi baru melalui Email anda </string>
    <string name="kirim_email">Kirim Email </string>
    <string name="sudah_punya_akun">Sudah punya akun ? </string>
    <string name="verifikasi_akun">Verifikasi Akun </string>
    <string name="verifikasi_akun_content">Kami akan mengirimkan kode tersebut melalui email..... </string>
    <string name="verifikasi_akun_kode">Kode akan berakhir dalam .... </string>
    <string name="btn_verifikasi">Verifikasi </string>
    <string name="verifikasi_sukses">Verifikasi Anda Berhasil !!! </string>
    <string name="verifikasi_sukses_content">Akun anda telah berhasil dibuat, Silahkan masuk untuk menggunakan aplikasi ini </string>
    <string name="kata_sandi_baru_title">Buat Kata Sandi Baru </string>
    <string name="kata_sandi_baru_kode">Kode </string>
    <string name="kata_sandi_baru">Kata Sandi Baru </string>
    <string name="ulangi_kata_sandi_baru">Ulangi Kata Sandi Baru </string>
    <string name="kata_sandi_berhasil">Kata Sandi Anda Berhasil Dibuat !!! </string>
    <string name="kata_sandi_content">Kata Sandi Anda telah berhasil Dibuat, Silahkan masuk untuk menggunakan aplikasi ini </string>
    <string name="aggrement">Dengan masuk atau mendaftar, saya setuju dengan syarat dan ketentuan dan kebijakan privasi</string>
    <string name="title_activity_scan_image">ScanImage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>