<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/lupa_kata_sandi_title"
        android:layout_marginVertical="100dp"
        android:layout_marginStart="30dp"
        android:textSize="30dp"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/txt_forgot_password" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/txt_forgot_password"
        android:id="@+id/txt_forgot_password_content"
        android:text="@string/lupa_kata_sandi_content"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password_content"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/edt_email"
        android:hint="@string/email"
        android:padding="20dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/edit_text_border"/>

    <Button
        android:id="@+id/btn_email"
        app:elevation="8dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        android:text="@string/kirim_email"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:layout_marginVertical="20dp"
        android:padding="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>