<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">
    <TextView
        android:id="@+id/txt_welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/welcome_tittle"
        android:textColor="@color/main_color"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/img_selamat_datang"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginVertical="20dp"
        android:src="@drawable/waste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome_title" />

    <Button
        android:id="@+id/btn_masuk"
        app:elevation="8dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        android:text="@string/btn_masuk"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_daftar"
        android:layout_marginVertical="20dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btn_daftar"
        android:layout_marginHorizontal="30dp"
        android:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_daftar"
        android:text="@string/btn_daftar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/txt_agreement"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginVertical="80dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/txt_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aggrement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="80dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>