<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".VerifySuccessActivity">
    <ImageView
        android:id="@+id/img_success"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_success"
        android:text="@string/verifikasi_sukses"
        android:textColor="@color/font_yellow"
        android:id="@+id/txt_verifikasi_sukses"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_verifikasi_sukses"
        android:text="@string/verifikasi_sukses_content"
        android:textAlignment="center"
        android:id="@+id/txt_verifikasi_success_content"/>

    <Button
        android:id="@+id/btn_masuk"
        app:elevation="8dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/font_yellow"
        android:text="@string/btn_masuk"
        android:textColor="@color/main_color"
        app:layout_constraintTop_toBottomOf="@+id/txt_verifikasi_success_content"
        android:layout_marginVertical="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>