<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/txt_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="100dp"
        android:layout_marginStart="30dp"
        android:text="@string/btn_daftar"
        android:textColor="@color/main_color"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/nama"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_register_title" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/email"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_nama" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Kata Sandi"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/edit_text_border"
            android:ems="15"
            android:padding="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ulangi Kata Sandi"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/edit_text_border"
            android:ems="15"
            android:padding="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_color"
        android:padding="10dp"
        android:text="@string/btn_daftar"
        android:textColor="@color/white"
        app:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password"
        tools:layout_editor_absoluteX="30dp" />

    <ProgressBar
        android:id="@+id/progres"
        android:layout_width="59dp"
        android:layout_height="83dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/txt_sudah_punya_akun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password"
         />

    <TextView
        android:id="@+id/txt_sudah_punya_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sudah_punya_akun"
        app:layout_constraintEnd_toEndOf="@id/btn_daftar"
        app:layout_constraintStart_toStartOf="@+id/btn_daftar"
        app:layout_constraintTop_toBottomOf="@+id/btn_daftar" />

    <TextView
        android:id="@+id/btn_masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_masuk"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txt_sudah_punya_akun"
        app:layout_constraintTop_toBottomOf="@+id/btn_daftar" />


</androidx.constraintlayout.widget.ConstraintLayout>