<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/verifikasi_akun"
        android:layout_marginVertical="100dp"
        android:layout_marginStart="30dp"
        android:textSize="30dp"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/verify_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_title"
        android:text="@string/verifikasi_akun_content"
        android:id="@+id/verifikasi_akun_content"
        android:textStyle="bold"
        android:layout_marginVertical="20dp"
        />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/verifikasi_akun_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/edt_kode1"
        android:padding="20dp"
        android:layout_marginVertical="20dp"
        android:maxLength="1"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/verifikasi_akun_content"
        app:layout_constraintStart_toEndOf="@+id/edt_kode1"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/edt_kode2"
        android:padding="20dp"
        android:layout_marginVertical="20dp"
        android:maxLength="1"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/verifikasi_akun_content"
        app:layout_constraintStart_toEndOf="@+id/edt_kode2"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/edt_kode3"
        android:padding="20dp"
        android:layout_marginVertical="20dp"
        android:maxLength="1"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/edt_kode4"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/edit_text_border"
        android:maxLength="1"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edt_kode3"
        app:layout_constraintTop_toBottomOf="@+id/verifikasi_akun_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_kode1"
        android:text="@string/verifikasi_akun_kode"
        android:id="@+id/verifikasi_akun_content_kode"
        android:textStyle="bold"
        android:layout_marginVertical="20dp"/>

    <Button
        android:id="@+id/btn_verifikasi"
        app:elevation="8dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        android:text="@string/btn_verifikasi"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/verifikasi_akun_content_kode"
        android:layout_marginVertical="20dp"
        android:padding="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>